snapshot-tests/tests/snapshots/parser__bad_strings__unterminated.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ unterminated:1:9
  │
1 │ foo = "\
  │         ^ expected `"`
